2011-09-21  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/vect/vect-cond-7.c: New test.
	* gcc.target/i386/sse4_1-cond-1.c: New test.
	* gcc.target/i386/avx-cond-1.c: New test.

2011-09-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/50464
	* g++.dg/other/pr50464.C: New test.

2011-09-21  Kirill Yukhin  <kirill.yukhin@intel.com>

	* gcc.target/i386/bmi2-mulx32-2.c: New test.
	* gcc.target/i386/bmi2-mulx32-2a.c: Ditto.
	* gcc.target/i386/bmi2-mulx64-2.c: Ditto.
	* gcc.target/i386/bmi2-mulx64-2a.c: Ditto.

2011-09-21  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt19.adb: New test.

2011-09-21  Terry Guo  <terry.guo@arm.com>

	* gcc.target/arm/neon-thumb2-move.c: Skip the warning message
	on arch conflict when testing case on targets other than armv7-a.

2011-09-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50454
	* g++.dg/ext/int128-1.C: New.
	* g++.dg/ext/int128-2.C: Likewise.
	* g++.dg/ext/int128-2.h: Likewise.

2011-09-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR testsuite/50469
	* gfortran.dg/storage_size_2.f08: Replace "must be be" with
	"must be".

2011-09-20  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/constexpr-generated1.C: New.

	PR c++/50442
	* g++.dg/overload/ref-conv1.C: New.

2011-09-20  Roberto Agostino Vitillo  <ravitillo@lbl.gov>

	* g++.dg/other/final1.C: New.

2011-09-20  Ira Rosen  <ira.rosen@linaro.org>

	* g++.dg/vect/slp-pr50413.cc: Don't run the test.  Remove main ()
	and get_bit ().

2011-09-19  Ian Bolton  <ian.bolton@arm.com>

	* gcc.dg/20100906-1.c: Use -fno-short-enums option for
	"target arm_eabi".

2011-09-19  Ira Rosen  <ira.rosen@linaro.org>

	PR tree-optimization/50413
	* g++.dg/vect/vect.exp: Run slp-pr* tests with
	-fdump-tree-slp-details.  Run other tests with
	-fdump-tree-vect-details.
	* g++.dg/vect/slp-pr50413.cc: New.

2011-09-18  Dominique d'Humieres  <dominiq@lps.ens.fr>
	    Ira Rosen  <ira.rosen@linaro.org>

	PR testsuite/50435
	* gcc.dg/vect/bb-slp-25.c: Add an if to avoid loop vectorization.