@@ -1,6 +1,5 @@
 /* { dg-do compile { target i?86-*-* x86_64-*-* } } */
 /* { dg-options "-O1 -msse2" } */
-/* { dg-require-effective-target sse2 } */
 
 #include <xmmintrin.h>
 
