@@ -1,5 +1,4 @@
 // { dg-do compile { target i?86-*-* x86_64-*-* } }
 // { dg-options "-msse" }
-// { dg-require-effective-target sse }
 
 #include <xmmintrin.h>
