@@ -1,3 +1,12 @@
+2011-09-21  Uros Bizjak  <ubizjak@gmail.com>
+
+	* g++.dg/other/i386-3.C: Remove duplicated dg-options.
+	* g++.dg/other/i386-4.C: Remove dg-requre-effective-target directive.
+	* g++.dg/other/i386-8.C: Ditto.
+	* g++.dg/other/pr34435.C: Ditto.
+	* g++.dg/other/pr39496.C: Ditto.
+	* g++.dg/other/mmintrin.C: Ditto.
+
 2011-09-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/vect/vect-cond-7.c: New test.
